# evojax

./: pyproject.toml
evojax/: sim_mgr.py
evojax/task/: slimevolley.py
examples/: neat.py  neat_test.py  train_neat.ipynb
examples/notebooks/: TutorialAlgorithmImplementation.ipynb
